--- a/VGA_UCF.ucf
+++ b/VGA_UCF.ucf
@@ -1,9 +1,11 @@
-NET "VGA_RED"	LOC = "H14"	|	IOSTANDARD = LVTTL	|	DRIVE = 8	|	SLEW = FAST;
-NET "VGA_GREEN"	LOC = "H15"	|	IOSTANDARD = LVTTL	|	DRIVE = 8	|	SLEW = FAST;
-NET "VGA_BLUE"	LOC = "G15"	|	IOSTANDARD = LVTTL	|	DRIVE = 8	|	SLEW = FAST;
-NET "VGA_HSYNC"	LOC = "F15"	|	IOSTANDARD = LVTTL	|	DRIVE = 8	|	SLEW = FAST;
-NET "VGA_VSYNC"	LOC = "F14"	|	IOSTANDARD = LVTTL	|	DRIVE = 8	|	SLEW = FAST;
 NET clk LOC = T9;
 NET reset LOC = L14;
+
+NET VGA_RED LOC = R12;
+NET VGA_GREEN LOC = T12;
+NET VGA_BLUE LOC = R11;
+NET VGA_HSYNC LOC = R9;
+NET VGA_VSYNC LOC = T10;
+
 NET "clk" TNM_NET = "clk";
 TIMESPEC "TS_clk" = PERIOD "clk" 20 ns HIGH 50 %;
